// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render correctly 1`] = `
<div
  class="mccree-divider mccree-divider-horizontal"
/>
`;

exports[`Divider should work with RGB HEX 1`] = `
Array [
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
]
`;

exports[`Divider should work with align 1`] = `
Array [
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-left"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-right"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
]
`;

exports[`Divider should work with color 1`] = `
Array [
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
]
`;

exports[`Divider should work with type 1`] = `
Array [
  <div
    class="mccree-divider mccree-divider-horizontal mccree-divider-text mccree-divider-text-center"
  >
    <span
      class="mccree-divider-inner-text"
    >
      divider
    </span>
  </div>,
  <div
    class="mccree-divider mccree-divider-vertical"
  />,
]
`;
